[package]
name = "ezpub"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
regex = "1.10.2"
roxmltree = "0.18.1"
zip = "0.6.6"
serde = { version = "1.0.190", features = ["derive"], optional = true }

[features]
serde = ["dep:serde"]